<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:fitsSystemWindows="false"
    tools:context=".ui.edit.editgif.EditGitFragment">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />


        <com.nomyek.myapplication.comon.GradientTextView
            android:id="@+id/title"
            style="@style/NotoSansBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            app:gradientAngle="0"
            app:gradientCenterColor="#C54DE2"
            app:gradientEndColor="#FFFFFF"
            app:gradientStartColor="#5936C8" />
    </LinearLayout>


    <!-- Wallpaper Preview Card - Custom View -->
    <com.nomyek.myapplication.comon.WallpaperPreviewGitCard
        android:id="@+id/wallpaper_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        app:badgeText="@string/reset_changes"
        app:layout_constraintBottom_toTopOf="@id/layout_buttons"
        app:layout_constraintDimensionRatio="9:16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintVertical_bias="0.15"
        app:showBadge="true"
        app:showBorderView="true" />

    <!-- Bottom Buttons -->
    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_32sdp"
        android:paddingBottom="@dimen/_24sdp"
        app:layout_constraintBottom_toTopOf="@id/btn_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_preview"
            style="@style/NotoSansBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_preview"
            android:gravity="center"
            android:text="@string/preview"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />

        <TextView
            android:id="@+id/btn_save"
            style="@style/NotoSansBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_save"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp" />
    </LinearLayout>

    <!-- Apply Button -->
    <TextView
        android:id="@+id/btn_apply"
        style="@style/NotoSansBold"
        android:layout_width="0dp"
        android:layout_height="@dimen/_52sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/bg_button_apply_purple"
        android:gravity="center"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
