<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:fitsSystemWindows="false">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <LinearLayout
                android:id="@+id/layout_premium_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_layout_pro"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="@dimen/_19sdp"
                android:paddingTop="@dimen/_17sdp"
                android:paddingBottom="@dimen/_27sdp"
                android:visibility="gone">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unlock_all_wallpaper"
                    android:textColor="#8C2864"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_get_now"
                    style="@style/NotoSansMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14dp"
                    android:background="@drawable/bg_setting_item"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/_12dp"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/go_premium"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Ads preferences Section -->
            <TextView
                style="@style/NotoSansMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/app_preferences"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_16sp" />

            <LinearLayout
                android:id="@+id/item_language"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/ripple_setting_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingEnd="12dp"
                android:paddingBottom="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="Language"
                    android:src="@drawable/ic_language" />

                <TextView
                    style="@style/NotoSans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sp" />

                <TextView
                    style="@style/NotoSans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:text="@string/english"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_16sp" />

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="Arrow"
                    android:src="@drawable/ic_chevron_right" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Support"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_16sp" />

            <LinearLayout
                android:id="@+id/item_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/ripple_setting_item"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:contentDescription="Feedback"
                    android:src="@drawable/ic_feedback" />

                <TextView
                    style="@style/NotoSans"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:text="@string/feedback"
                    android:textColor="@color/color_text"
                    android:textSize="@dimen/_16sp" />

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="Arrow"
                    android:src="@drawable/ic_chevron_right" />
            </LinearLayout>

            <!-- App preferences Section -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/others"
                android:textColor="@color/color_text"
                android:textSize="@dimen/_16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_setting_item"
                android:orientation="vertical"
                android:padding="@dimen/_12sdp">

                <LinearLayout
                    android:id="@+id/item_rate_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:contentDescription="Rate"
                        android:src="@drawable/ic_share" />

                    <TextView
                        style="@style/NotoSansMedium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:text="@string/rate_app"
                        android:textColor="@color/color_text"
                        android:textSize="@dimen/_16sp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="Arrow"
                        android:src="@drawable/ic_chevron_right" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#454545" />

                <LinearLayout
                    android:id="@+id/item_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_12sdp">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:contentDescription="Theme"
                        android:src="@drawable/ic_rate" />

                    <TextView
                        style="@style/NotoSans"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/rate_app"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="Arrow"
                        android:src="@drawable/ic_chevron_right" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#454545" />

                <LinearLayout
                    android:id="@+id/item_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:contentDescription="Theme"
                        android:src="@drawable/ic_privacy" />

                    <TextView
                        style="@style/NotoSans"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/term_and_privacy"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sp" />

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="Arrow"
                        android:src="@drawable/ic_chevron_right" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
